test/libsolidity/syntaxTests/nameAndTypeResolution/533_tuple_invalid_literal_too_large_exp.sol
contract C {
    function f() pure public {
        (2**270, 1);
    }
}
// ----
// TypeError 3390: (53-59='2**270'): Invalid rational number.
